polishing and binder

--- a/sandbox/01_causal_models/lecture.ipynb
+++ b/sandbox/01_causal_models/lecture.ipynb
@@ -53,9 +53,7 @@
     "id": "WuVgoNzhrJnb"
    },
    "source": [
-    "# Causal Models\n",
-    "\n",
-    "### Learning Goals\n",
+    "**Learning goals**\n",
     "- What is a DAG?\n",
     "- How do DAGs relate to SEMs?\n",
     "- What does the do operator do?\n",
@@ -67,7 +65,7 @@
     "\n",
     "<img src=\"material/elements_of_causal_inference.png\" height=\"300\" width=230 />\n",
     "\n",
-    "### Structure of lecture\n",
+    "**Structure of lecture**\n",
     "\n",
     "* Introduction\n",
     "\n",
@@ -77,15 +75,15 @@
     "\n",
     "* Using the underlying causal structure\n",
     "\n",
-    "## Introduction\n",
+    "# Introduction\n",
     "\n",
     "This first draft of the lectures is mostly a direct copy from the references below.   \n",
     "\n",
-    "### Motivation\n",
+    "## Motivation\n",
     "\n",
-    "We often deal with properties of a joint distribution $P^x$ of some $p-$ dimensional random vector $X$. In many situations we are interested in another distibution $\\hat{P}^X$ that differs from the observed distribution $\\hat{P}^X \\neq P^X$.\n",
+    "We often deal with properties of a joint distribution $P^x$ of some $p-$ dimensional random vector $X$. In many situations we are interested in **another distibution** $\\hat{P}^X$ that differs from the **observed distribution** $\\hat{P}^X \\neq P^X$.\n",
     "\n",
-    "#### Simpson's Paradox\n",
+    "### Simpson's Paradox\n",
     "\n",
     "> Simpson's paradox (or Simpson's reversal, Yule–Simpson effect, amalgamation paradox, or reversal paradox), is a phenomenon in probability and statistics, in which a trend appears in several different groups of data but disappears or reverses when these groups are combined. (Wikipedia)\n",
     "\n",
@@ -114,7 +112,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x7f4c91cc15c0>"
+       "<IPython.lib.display.YouTubeVideo at 0x7f78717455f8>"
       ]
      },
      "execution_count": 2,
@@ -365,7 +363,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How come that overall method B looks most favourable but it performs worse for each othe two subgroups."
+    "How come that overall method B looks most favourable but it performs worse for each othe two subgroups?"
    ]
   },
   {
@@ -407,7 +405,7 @@
     "id": "n-ZTl2_2rJnk"
    },
    "source": [
-    "### Graphs\n",
+    "# Graphs\n",
     "\n",
     "In this subsection we will briefly review some basic vocabulary to describe graphs and discuss each based on an example DAG. This material is also discussed in the second part of the video series around minute 60."
    ]
@@ -432,7 +430,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x7f4cc4195fd0>"
+       "<IPython.lib.display.YouTubeVideo at 0x7f7870e3d4e0>"
       ]
      },
      "execution_count": 8,
@@ -506,9 +504,9 @@
     "id": "0DyX3f2urJno"
    },
    "source": [
-    "## Structural equations models\n",
+    "# Structural equations models\n",
     "\n",
-    "#### Definition\n",
+    "**Definition**\n",
     "\n",
     "- A structural equation model is a set of equations and a joint distribution of noise terms\n",
     "\\begin{equation*}\n",
@@ -522,7 +520,8 @@
     "- To get a causal graph we go through the model equation by equation and draw directed edges from each RHS variable into the corresponding left-hand side variable\n",
     "- We write $:=$ instead of $=$ to stress that a SEM is more than a system of equations. What is to the left and the right of the equal sign matters when we talk about interventions.\n",
     "\n",
-    "#### Example 1 \n",
+    "**Example 1**\n",
+    "\n",
     "Consider the following SEM \n",
     "\n",
     "\n",
@@ -556,7 +555,7 @@
     "\n",
     "- What is the corresponding DAG?\n",
     "\n",
-    "#### Example 2\n",
+    "**Example 2**\n",
     "\n",
     "\n",
     "$\\begin{aligned}\n",
@@ -578,7 +577,7 @@
     "    - Using the same strategy as for simulation I can express every variable as a function of the noise terms\n",
     "    example: $X_4 = f_4(f_2(f_1(f_3(N_3), N_1), N_2), f_3(N_3), N_4)$\n",
     "    \n",
-    "### Do operator and Intervention distributions\n",
+    "## Do operator and Intervention distributions\n",
     "\n",
     "- The SEM $S$ implies a joint distribution of variables $\\mathbb{P^X_{S}}$\n",
     "- The intervention distribution $\\mathbb{P}^{X|do(X_j = f^{'}_j(Par_j, N_j)}_{S}$ is the joint distribution implied by a SEM where we replace $f_j$ by  $f^{'}_j$\n",
@@ -586,7 +585,7 @@
     "- The expected value of $X_i$ under the intervention distribution is often denoted as $E(X_i|do(X_j = f^{'}_j(Par_j, N_j))$\n",
     "- Common special cases is $do(X_j = a)$, where a is a constant \n",
     "\n",
-    "#### Example 1 Revisited\n",
+    "**Example 1 Revisited**\n",
     "- We apply $do(X = 3)$ to the structural model from Example 1?\n",
     "- The modified model is\n",
     "\n",
@@ -618,14 +617,15 @@
     "\n",
     "- This differs from the conditional disttribution of $X$ given $Y = 3$ denoted $\\mathbb{P}^{X|Y = 3}$.\n",
     "\n",
-    "#### Causal Effects and the Difference Between Conditioning and Intervening\n",
+    "## Causal Effects and the Difference Between Conditioning and Intervening\n",
     "- Draw Graph again\n",
     "- Interventions on Y do not affect X, however Interventions on X do affect Y. That is the case because the directed edge goes from $X$ to $Y$.\n",
     "- We use this observation to define a causal effect.  Given SEM $S$ there is a (total) causal effect from $X$ to $Y$ iff $X \\not\\!\\perp\\!\\!\\!\\perp Y$ in $\\mathbb{P}^{X|do(X = N^{'}_x)}_S$ for some variable $N^{'}_x$\n",
     "- If we want to quatify the causal effect we can compare how probabilities for a specific event change or look at the Average causal effect on $Y$ if we change $X$ from $x^{''}$ to $x^{'}$: $E[Y|X=do(x^{'})]-E[Y|X=do(x^{''})]$\n",
     "- The do operator only influences the distribution of children of the variable we intervene on. Conditioning also influences parents.\n",
     "\n",
-    "### The Correct Model\n",
+    "**The Correct Model**\n",
+    "\n",
     "A SEM is correct if the implied distribution is correct and the intervention distributions correspond to distributions obtained from actual interventions."
    ]
   },
@@ -636,12 +636,12 @@
     "id": "0DyX3f2urJno"
    },
    "source": [
-    "## Using the underlying causal structure\n",
+    "# Using the underlying causal structure\n",
     "\n",
     "Now the question turn how we can exploit knowledge about the underlying causal structure and recover the **interventional** distribution from the **observed** distribution. We will revisit the kidney stone example from above but the ideas hold more generally and are captured by the idea of an **adjustment set**.\n",
     "\n",
     "\n",
-    "### Kidney's stone example\n",
+    "## Kidney's stone example\n",
     "\n",
     "Lets assume the true underlying SEM allows for the graph below. Here, $Z$ is the size of the stone, $T$ the treatment and $R$ the recovery. In this setup, $Z$ is a confounding factor.\n",
     "\n",
@@ -785,7 +785,7 @@
     "\n",
     "In the example above, $Z = \\{Z\\}$ is a valid adjustment set.\n",
     "\n",
-    "#### Adjustment Sets (Theorem)\n",
+    "## Adjustment Sets (Theorem)\n",
     "Simplified Notation: $X$ is a Treatment and $Y$ is an outcome. We want to identify $𝑝𝑆,𝑑𝑜(𝑋=𝑥)(𝑦)$ by adjusting for variables in Z.\n",
     "-Backdoor Adjustment:\n",
     "    - Z blocks alls paths from $X$ to $Y$ entering $X$ through the backdoor\n",
@@ -795,7 +795,7 @@
     "    -$Z$ contains no descendant of any node on a directed Path from $X$ to $Y$ (except fo descendants of $X$ that are on a directed path from $X$ to $Y$) AND \n",
     "    -Z blocks all non-directed paths from X to Y\n",
     "    \n",
-    "### Example:\n",
+    "**Example:**\n",
     "\n",
     "<img src=\"material/dagitty.png\" height=1000 width=500 />\n",
     "\n",
@@ -812,7 +812,7 @@
     "id": "etLxJPhlrJns"
    },
    "source": [
-    "## References\n",
+    "# References\n",
     "\n",
     "* Peters, J., Janzig, D. and Schölkopf, B. (2017). [Elements of causal inference: Foundations and learning algorithms](http://web.math.ku.dk/~peters/jonas_files/cover.png). Cambridge, MA: MIT Press.\n",
     "\n",
