added distinction  between statistical and causal model as a reminder

--- a/sandbox/01_causal_models/lecture.ipynb
+++ b/sandbox/01_causal_models/lecture.ipynb
@@ -617,6 +617,9 @@
     "\n",
     "- This differs from the conditional disttribution of $X$ given $Y = 3$ denoted $\\mathbb{P}^{X|Y = 3}$.\n",
     "\n",
+    "\n",
+    "We want to stress the distinction between a **causal** and **statistical** model. The *do* - operator is defined for the causal model while the conditional distribution refers to the statistical model induced by the causal structure.\n",
+    "\n",
     "## Causal Effects and the Difference Between Conditioning and Intervening\n",
     "- Draw Graph again\n",
     "- Interventions on Y do not affect X, however Interventions on X do affect Y. That is the case because the directed edge goes from $X$ to $Y$.\n",
