--- a/sandbox/01_causal_models/lecture.ipynb
+++ b/sandbox/01_causal_models/lecture.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -112,10 +112,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x7f78717455f8>"
+       "<IPython.lib.display.YouTubeVideo at 0x107037438>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "4               A  Success  Small"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>top</th>\n",
-       "      <td>A</td>\n",
+       "      <td>B</td>\n",
        "      <td>Success</td>\n",
        "      <td>Small</td>\n",
        "    </tr>\n",
@@ -280,11 +280,11 @@
        "       Method  Outcome   Size\n",
        "count     700      700    700\n",
        "unique      2        2      2\n",
-       "top         A  Success  Small\n",
+       "top         B  Success  Small\n",
        "freq      350      562    357"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -430,10 +430,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x7f7870e3d4e0>"
+       "<IPython.lib.display.YouTubeVideo at 0x11ba4b438>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,7 @@
        "Name: Size, dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
        "Success  0.730038  0.931034"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -823,9 +823,140 @@
     "\n",
     "* Pearl, J. (2009). [Causality](https://www.amazon.de/Causality-Judea-Pearl/dp/052189560X?SubscriptionId=AKIAILSHYYTFIVPWUY6Q&tag=duc03-21&linkCode=xm2&camp=2025&creative=165953&creativeASIN=052189560X). Cambridge, MA: Cambridge University Press.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"cite2c-biblio\"></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<!--"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<cite data-cite=\"6687232/W8V2ATVT\"></cite>\n",
+    "<cite data-cite=\"6687232/3B3IZL6I\"></cite>\n",
+    "<cite data-cite=\"undefined\"></cite>\n",
+    "<cite data-cite=\"6687232/5423SBEE\"></cite>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-->"
+   ]
   }
  ],
  "metadata": {
+  "cite2c": {
+   "citations": {
+    "6687232/3B3IZL6I": {
+     "author": [
+      {
+       "family": "Peters",
+       "given": "Jonas"
+      },
+      {
+       "family": "Janzig",
+       "given": "Dominik"
+      },
+      {
+       "family": "Schölkopf",
+       "given": "Bernhard"
+      }
+     ],
+     "id": "6687232/3B3IZL6I",
+     "issued": {
+      "year": 2017
+     },
+     "publisher": "MIT Press",
+     "title": "Elements of causal inference: Foundations and learning algorithms",
+     "type": "book"
+    },
+    "6687232/4LTHJXYQ": {
+     "author": [
+      {
+       "family": "Pearl",
+       "given": "Judea"
+      }
+     ],
+     "id": "undefined",
+     "issued": {
+      "year": 2009
+     },
+     "publisher": "Cambridge University Press",
+     "title": "Causality",
+     "type": "book"
+    },
+    "6687232/5423SBEE": {
+     "author": [
+      {
+       "family": "Charig",
+       "given": "C.R."
+      },
+      {
+       "family": "Webb",
+       "given": "D.R."
+      },
+      {
+       "family": "Payne",
+       "given": "S.R."
+      },
+      {
+       "family": "Wickham",
+       "given": "J.E."
+      }
+     ],
+     "container-title": "British medical journal (Clinical research ed.)",
+     "id": "6687232/5423SBEE",
+     "issue": "6524",
+     "page": "879-882",
+     "page-first": "879",
+     "title": "Comparison of treatment of renal calculi by open surgery, percutaneous nephrolithotomy, and extracorporeal shockwave lithotripsy",
+     "type": "article-journal",
+     "volume": "292"
+    },
+    "6687232/W8V2ATVT": {
+     "URL": "http://web.math.ku.dk/ peters/jonas_files/scriptChapter1-4.pdf",
+     "author": [
+      {
+       "family": "Peters",
+       "given": "Jonas"
+      }
+     ],
+     "id": "6687232/W8V2ATVT",
+     "issued": {
+      "year": 2015
+     },
+     "title": "Causality: Lecture notes",
+     "type": "book"
+    },
+    "undefined": {
+     "author": [
+      {
+       "family": "Pearl",
+       "given": "Judea"
+      }
+     ],
+     "id": "undefined",
+     "issued": {
+      "year": 2009
+     },
+     "publisher": "Cambridge University Press",
+     "title": "Causality",
+     "type": "book"
+    }
+   }
+  },
   "colab": {
    "name": "lecture.ipynb",
    "provenance": [],
