added plot on conditional and interventional distributions

--- a/sandbox/01_causal_models/lecture.ipynb
+++ b/sandbox/01_causal_models/lecture.ipynb
@@ -553,6 +553,8 @@
     "  \\end{matrix} \\right) \\right)\n",
     "\\end{aligned}$\n",
     "\n",
+    "<img src=\"material/conditional_distribution.png\" height=\"400\" width=600 />\n",
+    "\n",
     "- What is the corresponding DAG?\n",
     "\n",
     "**Example 2**\n",
@@ -617,6 +619,7 @@
     "\n",
     "- This differs from the conditional disttribution of $X$ given $Y = 3$ denoted $\\mathbb{P}^{X|Y = 3}$.\n",
     "\n",
+    "<img src=\"material/interventional_distribution.png\" height=\"400\" width=600 />\n",
     "\n",
     "We want to stress the distinction between a **causal** and **statistical** model. The *do* - operator is defined for the causal model while the conditional distribution refers to the statistical model induced by the causal structure.\n",
     "\n",
@@ -977,7 +980,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.8"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
