--- a/sandbox/01_causal_models/lecture.ipynb
+++ b/sandbox/01_causal_models/lecture.ipynb
@@ -821,43 +821,18 @@
    "source": [
     "# References\n",
     "\n",
-    "* Peters, J., Janzig, D. and Schölkopf, B. (2017). [Elements of causal inference: Foundations and learning algorithms](http://web.math.ku.dk/~peters/jonas_files/cover.png). Cambridge, MA: MIT Press.\n",
-    "\n",
-    "* Peters, J. (2015). [Causality: Lecture notes](http://web.math.ku.dk/~peters/jonas_files/scriptChapter1-4.pdf). Zurich: ETH Zurich.\n",
-    "\n",
-    "* Pearl, J. (2009). [Causality](https://www.amazon.de/Causality-Judea-Pearl/dp/052189560X?SubscriptionId=AKIAILSHYYTFIVPWUY6Q&tag=duc03-21&linkCode=xm2&camp=2025&creative=165953&creativeASIN=052189560X). Cambridge, MA: Cambridge University Press.\n"
+    "* Charig, C. R., Webb, D. R., Payne, S. R., & Wickham, J. E. (1986). Comparison of treatment of renal calculi by open surgery, percutaneous nephrolithotomy, and extracorporeal shockwave lithotripsy. *British medical journal (Clinical research ed.)*, *292*(6524), 879-882.\n",
+    "* Pearl, J. (2009). *Causality*. Cambridge University Press.\n",
+    "* Peters, J. (2015). *Causality: Lecture notes*. Retrieved from\n",
+    "http://web.math.ku.dk/peters/jonasfiles/scriptChapter1−4.pdf\n",
+    "* Peters, J., Janzig, D., & Schölkopf, B. (2017). *Elements of causal inference:\n",
+    "Foundations and learning algorithms*. MIT Press.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "<div class=\"cite2c-biblio\"></div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<!--"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<cite data-cite=\"6687232/W8V2ATVT\"></cite>\n",
-    "<cite data-cite=\"6687232/3B3IZL6I\"></cite>\n",
-    "<cite data-cite=\"undefined\"></cite>\n",
-    "<cite data-cite=\"6687232/5423SBEE\"></cite>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "-->"
-   ]
+   "source": []
   }
  ],
  "metadata": {
