--- a/selected-topics/01-simulation-choice-probabilities/slides/material/cover-slide.tex
+++ b/selected-topics/01-simulation-choice-probabilities/slides/material/cover-slide.tex
@@ -17,7 +17,7 @@ anCapitalAnalysis/micromeetrics}{\includegraphics[height=0.8cm]{material/GithubM
 	\put(230,0){\includegraphics[height=1cm]{material/UniBonnLogo.png}}
 	% Cover Text and Author
 	\put(180,230){\begin{minipage}[t]{0.4\linewidth}
-		{{\color{darkgray!85!blue}{ \Huge {\slshape M}}}{{\color{darkgray}\large \slshape icroeconometrics}} \\ \vspace{-5.5pt} \\
+		{{\color{darkgray!85!blue}{ \Huge {\slshape T}}}{{\color{darkgray}\large \slshape alks}} \\ \vspace{-5.5pt} \\
 			\hspace{2pt} {\color{orange!45!yellow}\rule[-0.5mm]{60mm}{0.25mm}}
 			$~~~~~$ {\color{darkgray!85!blue}Philipp Eisenhauer}}
 		\end{minipage}}
