--- a/selected-topics/02-sensitivity-analysis/slides/files/s-qualitative.tex
+++ b/selected-topics/02-sensitivity-analysis/slides/files/s-qualitative.tex
@@ -19,14 +19,14 @@
 \begin{frame}
 
 		\begin{itemize}
-			\item  The approach segments the model input ranges $[x^-_i, x^+_i]$ in $l$ levels. Given $l$ levels with $m$ inputs, there are $l^n$ points in the grid from which a subset of $r$ points is drawn at random. For each of the $r$, the model is evaluated performing a series of OAT sensitivities.
+			\item  The approach segments the model input ranges $[x^-_i, x^+_i]$ in $l$ levels. Given $l$ levels with $K$ inputs, there are $l^n$ points in the grid from which a subset of $r$ points is drawn at random. For each of the $r$, the model is evaluated performing a series of OAT sensitivities.
 		\end{itemize}
 
 \end{frame}
 
 \begin{frame}
 	\begin{align*}
-	  ee_i = \frac{f(x_1, \hdots, x_{i - 1}, x_i + \Delta, x_{i + 1}, \hdots, x_n) - f(\textbf{x})}{\Delta}
+	  ee_i = \frac{f(x_1, \hdots, x_{i - 1}, x_i + \Delta, x_{i + 1}, \hdots, x_K) - f(\textbf{x})}{\Delta}
 	\end{align*}
 \end{frame}
 
