--- a/selected-topics/03-high-performance-python/slides/files/s-appendix.tex
+++ b/selected-topics/03-high-performance-python/slides/files/s-appendix.tex
@@ -12,6 +12,8 @@
 \newgeometry{margin=1cm}
 \begin{frame}[allowframebreaks]\frametitle{}
 
+\nocite{Hahn.2001,Thistlethwaite.1960}
+
 \bibliographystyle{apacite}
 \bibliography{../../../submodules/bibliography/literature}
 \end{frame}
