--- a/selected-topics/02-sensitivity-analysis/slides/files/s-resources.tex
+++ b/selected-topics/02-sensitivity-analysis/slides/files/s-resources.tex
@@ -6,7 +6,7 @@
 \end{center}\end{frame}
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
-\begin{frame}[allowframebreaks]\textbf{Textbooks}\vspace{0.3cm}
+\begin{frame}\textbf{Textbooks}\vspace{0.3cm}
 
 \begin{itemize}\small
 \item \bibentry{Saltelli.2004}
@@ -16,44 +16,43 @@
 \end{frame}
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
-\begin{frame}[allowframebreaks]\textbf{Reviews}\vspace{0.3cm}
+\begin{frame}\textbf{Reviews}\vspace{0.3cm}
 
 \begin{itemize}\small
 \item \bibentry{Borgonovo.2016}
 \end{itemize}
 
 \end{frame}
-
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
-\begin{frame}[allowframebreaks]\textbf{Seminal papers}\vspace{0.3cm}
+\begin{frame}\textbf{Seminal papers}\vspace{0.3cm}
 
 \begin{itemize}\small
-\item \bibentry{Saltelli.2002}\\
+\item \bibentry{Saltelli.2002}\vspace{0.3cm}
 \begin{itemize}\footnotesize
-	\item \footnotesize quantitative, brute force, dependent factors
+ 	\item \footnotesize quantitative, brute force, dependent factors\vspace{0.3cm}
 \end{itemize}
-\item \bibentry{Morris.1991}\\
+\item \bibentry{Morris.1991}\vspace{0.3cm}
 \begin{itemize}\footnotesize
-	\item \footnotesize qualitative, Morris screening
+	\item \footnotesize qualitative, Morris screening\vspace{0.3cm}
 \end{itemize}
 \end{itemize}
 
 \end{frame}
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
-\begin{frame}[allowframebreaks]\vspace{0.3cm}
+\begin{frame}\vspace{0.3cm}
 
 \begin{itemize}\small
-	\item \bibentry{Campolongo.2007}\\
+	\item \bibentry{Campolongo.2007}\vspace{0.3cm}
 		\begin{itemize}\footnotesize
-			\item \footnotesize modification of Morris screening
+			\item \footnotesize modification of Morris screening\vspace{0.3cm}
 		\end{itemize}
-\item \bibentry{Homma.1996}\\
+\item \bibentry{Homma.1996}\vspace{0.3cm}
 	\begin{itemize}\footnotesize
-		\item \footnotesize total effect, factor screening
+		\item \footnotesize total effect, factor screening\vspace{0.3cm}
 	\end{itemize}
-\item \bibentry{Sobol.1993}\\
+\item \bibentry{Sobol.1993}\vspace{0.3cm}
 	\begin{itemize}\footnotesize
 		\item \footnotesize main effect, variance-based measure
 	\end{itemize}
@@ -61,17 +60,16 @@
 \end{itemize}
 
 \end{frame}
-
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
-\begin{frame}[allowframebreaks]
+\begin{frame}
 
-\begin{itemize}\small\setlength\itemsep{1em}
-\item \bibentry{Ge.2017}\\
+\begin{itemize}\small
+\item \bibentry{Ge.2017}\vspace{0.3cm}
 \begin{itemize}\footnotesize
-	\item \footnotesize qualitative, Morris screening, dependent factors
+	\item \footnotesize qualitative, Morris screening, dependent factors\vspace{0.3cm}
 \end{itemize}
-\item \bibentry{Kucherenko.2012}\\
+\item \bibentry{Kucherenko.2012}\vspace{0.3cm}
 \begin{itemize}\footnotesize
 	\item quantitative, variance-based measure, dependent factors
 \end{itemize}
